force-app/main/default/objects/Contact/fields/Accepts_Reimbursements_for_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Accepts_Reimbursements_for_Referrals__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>will accept reimbursement for referrals</inlineHelpText>
    <label>Accepts Reimbursements for Referrals</label>

    <type>Checkbox</type>
</CustomField>