force-app/main/default/objects/Contact/fields/Acknowledgement_ID__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_ID__c</fullName>
    <description>Temporary ID until a OneKey ID gets assigned</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Acknowledgement ID</label>
    <length>80</length>

    <type>Text</type>
</CustomField>