force-app/main/default/objects/Contact/fields/Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Affiliation__c</fullName>
    <inlineHelpText>HCP Affiliations: Classification of the physician&#39;s affiliate organization (hospital, outpatient, academic, etc)</inlineHelpText>
    <label>Affiliation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail Pharmacy</fullName>
            </value>
            <value>
                <fullName>Compounding</fullName>
            </value>
            <value>
                <fullName>Clinic</fullName>
            </value>
            <value>
                <fullName>Health Department</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Osteopathic Medical School</fullName>
            </value>
            <value>
                <fullName>Distributor - Corporate Headquarters</fullName>
            </value>
            <value>
                <fullName>Home Health</fullName>
            </value>
            <value>
                <fullName>Nursing Homes</fullName>
            </value>
            <value>
                <fullName>Residential Facilities</fullName>
            </value>
            <value>
                <fullName>Assisted Living</fullName>
            </value>
            <value>
                <fullName>Central Fill</fullName>
            </value>
            <value>
                <fullName>Independent Living</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Software Vendor</fullName>
            </value>
            <value>
                <fullName>Physical Medicine and Rehabilitation</fullName>
            </value>
            <value>
                <fullName>Psychiatric Hospital</fullName>
            </value>
            <value>
                <fullName>Clinical Laboratory</fullName>
            </value>
            <value>
                <fullName>Outpatient Pharmacy</fullName>
            </value>
            <value>
                <fullName>Alternative Medicine</fullName>
            </value>
            <value>
                <fullName>Adult Day Care</fullName>
            </value>
            <value>
                <fullName>Managed Care</fullName>
            </value>
            <value>
                <fullName>Employee Assistance Programs</fullName>
            </value>
            <value>
                <fullName>Non-health Delivery</fullName>
            </value>
            <value>
                <fullName>Blood Bank</fullName>
            </value>
            <value>
                <fullName>Research Institute</fullName>
            </value>
            <value>
                <fullName>City/County/State</fullName>
            </value>
            <value>
                <fullName>Mail Service</fullName>
            </value>
            <value>
                <fullName>Executive Health Program</fullName>
            </value>
            <value>
                <fullName>Medical Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>