force-app/main/default/objects/Contact/fields/CC_Staff_Status__c.field-meta.xml
<CustomField>
    <fullName>CC_Staff_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for the status of call center staff</description>
    <label>CC Staff Status</label>
    <type>Checkbox</type>
</CustomField>