force-app/main/default/objects/Contact/fields/Consent_To_Inform_About_Study__c.field-meta.xml
<CustomField>
    <fullName>Consent_To_Inform_About_Study__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent To Inform About Study</label>
    <type>Checkbox</type>
</CustomField>