force-app/main/default/objects/Contact/fields/Cookies_Agreed_on_Reg__c.field-meta.xml
<CustomField>
    <fullName>Cookies_Agreed_on_Reg__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cookies acceptance during the registration process</description>
    <label>Cookies Agreed on Reg</label>
    <type>Checkbox</type>
</CustomField>