force-app/main/default/objects/Contact/fields/Current_Participant_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Current_Participant_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Participant Enrollment</label>
    <referenceTo>Participant_Enrollment__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>