force-app/main/default/objects/Contact/fields/Current_Sponsor_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Sponsor_Name__c</fullName>
    <label>Current Sponsor Name</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>