force-app/main/default/objects/Contact/fields/Date_CL_was_informed_of_opt_in__c.field-meta.xml
<CustomField>
    <fullName>Date_CL_was_informed_of_opt_in__c</fullName>
    <description>Date CL was informed of opt-in to RNS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date CL was informed of opt-in</label>
    <type>Date</type>
</CustomField>