force-app/main/default/objects/Contact/fields/Date_Opted_in_RNS__c.field-meta.xml
<CustomField>
    <fullName>Date_Opted_in_RNS__c</fullName>
    <description>date that PI opted into RNS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Opted in RNS</label>
    <type>Date</type>
</CustomField>