force-app/main/default/objects/Contact/fields/Date_PI_oriented_to_RNS__c.field-meta.xml
<CustomField>
    <fullName>Date_PI_oriented_to_RNS__c</fullName>
    <description>date PI was oriented on RNS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date PI oriented to RNS</label>
    <type>Date</type>
</CustomField>