force-app/main/default/objects/Contact/fields/Date_RH_submitted_to_IRB__c.field-meta.xml
<CustomField>
    <fullName>Date_RH_submitted_to_IRB__c</fullName>
    <description>Date RH was submitted to IRB</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date RH submitted to IRB</label>
    <type>Date</type>
</CustomField>