force-app/main/default/objects/Contact/fields/Date_RH_team_informed_of_IRB_approval__c.field-meta.xml
<CustomField>
    <fullName>Date_RH_team_informed_of_IRB_approval__c</fullName>
    <description>date RH team informed of IRB approval</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date RH team informed of IRB approval</label>
    <type>Date</type>
</CustomField>