force-app/main/default/objects/Contact/fields/Delegate_Opt_In_Status_Emails__c.field-meta.xml
<CustomField>
    <fullName>Delegate_Opt_In_Status_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delegate Opt In Status Emails</label>
    <type>Checkbox</type>
</CustomField>