force-app/main/default/objects/Contact/fields/HCP_Interest__c.field-meta.xml
<CustomField>
    <fullName>HCP_Interest__c</fullName>
    <label>HCP Interested</label>

    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Principal Investigator</fullName>
            </value>
            <value>
                <fullName>Sub Investigator</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>