force-app/main/default/objects/Contact/fields/HCP_Interested_Date__c.field-meta.xml
<CustomField>
    <fullName>HCP_Interested_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HCP Interested Date</label>

    <type>Date</type>
</CustomField>