force-app/main/default/objects/Contact/fields/HCP_Opt_In_Study_Emails__c.field-meta.xml
<CustomField>
    <fullName>HCP_Opt_In_Study_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HCP Opt In Study Emails</label>

    <type>Checkbox</type>
</CustomField>