force-app/main/default/objects/Contact/fields/Integration_Email__c.field-meta.xml
<CustomField>
    <fullName>Integration_Email__c</fullName>
    <inlineHelpText>Initially populated by Data Factory value, available for override</inlineHelpText>
    <label>Integration Email</label>
    <type>Email</type>
</CustomField>