force-app/main/default/objects/Contact/fields/Investigator_Key__c.field-meta.xml
<CustomField>
    <fullName>Investigator_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Investigator Key</label>
    <length>255</length>

    <type>Text</type>
    <unique>true</unique>
</CustomField>