force-app/main/default/objects/Contact/fields/IQVIA_Artificial_Voice_Consent__c.field-meta.xml
<CustomField>
    <fullName>IQVIA_Artificial_Voice_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IQVIA Artificial Voice Consent</label>
    <type>Checkbox</type>
</CustomField>