force-app/main/default/objects/Contact/fields/IQVIA_Artificial_Voice_Consent_Time__c.field-meta.xml
<CustomField>
    <fullName>IQVIA_Artificial_Voice_Consent_Time__c</fullName>
    <label>IQVIA Artificial Voice Consent Time</label>
    <type>DateTime</type>
</CustomField>