force-app/main/default/objects/Contact/fields/IQVIA_Assisted_Dialing_Consent__c.field-meta.xml
<CustomField>
    <fullName>IQVIA_Assisted_Dialing_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IQVIA Assisted Dialing Consent</label>
    <type>Checkbox</type>
</CustomField>