force-app/main/default/objects/Contact/fields/IQVIA_Assisted_Dialing_Consent_Time__c.field-meta.xml
<CustomField>
    <fullName>IQVIA_Assisted_Dialing_Consent_Time__c</fullName>
    <label>IQVIA Assisted Dialing Consent Time</label>
    <type>DateTime</type>
</CustomField>