force-app/main/default/objects/Contact/fields/IQVIA_Direct_Mail_Consent_Time__c.field-meta.xml
<CustomField>
    <fullName>IQVIA_Direct_Mail_Consent_Time__c</fullName>
    <label>IQVIA Direct Mail Consent Time</label>
    <type>DateTime</type>
</CustomField>