force-app/main/default/objects/Contact/fields/IQVIA_Email_Consent_Time__c.field-meta.xml
<CustomField>
    <fullName>IQVIA_Email_Consent_Time__c</fullName>
    <label>IQVIA Email Consent Time</label>
    <type>DateTime</type>
</CustomField>