force-app/main/default/objects/Contact/fields/IQVIA_Phone_Consent_Time__c.field-meta.xml
<CustomField>
    <fullName>IQVIA_Phone_Consent_Time__c</fullName>
    <label>IQVIA Phone Consent Time</label>
    <type>DateTime</type>
</CustomField>