force-app/main/default/objects/Contact/fields/IQVIA_PI_Storage_Consent_Time__c.field-meta.xml
<CustomField>
    <fullName>IQVIA_PI_Storage_Consent_Time__c</fullName>
    <label>IQVIA PI Storage Consent Time</label>
    <type>DateTime</type>
</CustomField>