force-app/main/default/objects/Contact/fields/IQVIA_Pre_recorded_Calls_Consent_Time__c.field-meta.xml
<CustomField>
    <fullName>IQVIA_Pre_recorded_Calls_Consent_Time__c</fullName>
    <label>IQVIA Pre-recorded Calls Consent Time</label>
    <type>DateTime</type>
</CustomField>