force-app/main/default/objects/Contact/fields/IQVIA_SMS_Consent_Time__c.field-meta.xml
<CustomField>
    <fullName>IQVIA_SMS_Consent_Time__c</fullName>
    <label>IQVIA SMS Consent Time</label>
    <type>DateTime</type>
</CustomField>