force-app/main/default/objects/Contact/fields/IRB_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>IRB_Approval_Date__c</fullName>
    <description>IRB approval of RH</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IRB Approval Date</label>
    <type>Date</type>
</CustomField>