force-app/main/default/objects/Contact/fields/Is_First_Logon__c.field-meta.xml
<CustomField>
    <fullName>Is_First_Logon__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is First Logon</label>

    <type>Checkbox</type>
</CustomField>