force-app/main/default/objects/Contact/fields/Is_FollowUp_Sent__c.field-meta.xml
<CustomField>
    <fullName>Is_FollowUp_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is FollowUp Sent</label>
    <type>Checkbox</type>
</CustomField>