force-app/main/default/objects/Contact/fields/Is_Invalid_Number__c.field-meta.xml
<CustomField>
    <fullName>Is_Invalid_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Invalid Number</label>
    <type>Checkbox</type>
</CustomField>