force-app/main/default/objects/Contact/fields/Is_Patient_User_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_Patient_User_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Patient User Created</label>
    <type>Checkbox</type>
</CustomField>