force-app/main/default/objects/Contact/fields/is_Site_Country__c.field-meta.xml
<CustomField>
    <fullName>is_Site_Country__c</fullName>
    <formula>Account.BillingCountry !=  MailingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Site Country</label>
    <type>Checkbox</type>
</CustomField>