force-app/main/default/objects/Contact/fields/Janssen_unique__c.field-meta.xml
<CustomField>
    <fullName>Janssen_unique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Janssen unique</label>
    <type>Checkbox</type>
</CustomField>