force-app/main/default/objects/Contact/fields/Landing_Community__c.field-meta.xml
<CustomField>
    <fullName>Landing_Community__c</fullName>
    <description>The landing community template when a prospect logs in</description>
    <label>Landing Community</label>
    <length>255</length>
    <type>Text</type>
</CustomField>