force-app/main/default/objects/Contact/fields/LanguageLocaleKey__c.field-meta.xml
<CustomField>
    <fullName>LanguageLocaleKey__c</fullName>
    <description>Deprecated TODO Remove!  LanguageLocaleKey from the related user, updated by a process builder.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>LanguageLocaleKey</label>
    <length>5</length>

    <type>Text</type>
</CustomField>