force-app/main/default/objects/Contact/fields/Last_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Session_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>