force-app/main/default/objects/Contact/fields/Library_Primary_Language__c.field-meta.xml
<CustomField>
    <fullName>Library_Primary_Language__c</fullName>
    <label>Library Primary Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>