force-app/main/default/objects/Contact/fields/Next_Notify_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Notify_Date__c</fullName>
    <label>Next Notify Date</label>
    <type>Date</type>
</CustomField>