force-app/main/default/objects/Contact/fields/Next_Profile_Update_DT__c.field-meta.xml
<CustomField>
    <fullName>Next_Profile_Update_DT__c</fullName>
    <label>Next Profile Update DT</label>
    <type>DateTime</type>
</CustomField>