force-app/main/default/objects/Contact/fields/Not_Show_Bulk_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Not_Show_Bulk_Instruction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Show Bulk Instruction</label>
    <type>Checkbox</type>
</CustomField>