force-app/main/default/objects/Contact/fields/OneKeyID__c.field-meta.xml
<CustomField>
    <fullName>OneKeyID__c</fullName>
    <description>QI One Key ID Number. If an existing HCP, then value will come from ACOE.  If self-enroll, OneKey API to be called to determine if HCP exists.  Otherwise, this will get updated based on the Acknowledgement ID from OneKey.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>OneKey ID</label>
    <length>80</length>

    <type>Text</type>
    <unique>true</unique>
</CustomField>