force-app/main/default/objects/Contact/fields/Override_Email__c.field-meta.xml
<CustomField>
    <fullName>Override_Email__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Initially populated by Data Factory value, available for override</inlineHelpText>
    <label>Override Email</label>

    <type>Email</type>
</CustomField>