force-app/main/default/objects/Contact/fields/Override_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Override_Mailing_Address__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Initially populated by Data Factory value, available for override</inlineHelpText>
    <label>Override Mailing Address</label>
    <type>TextArea</type>
</CustomField>