force-app/main/default/objects/Contact/fields/Override_Phone__c.field-meta.xml
<CustomField>
    <fullName>Override_Phone__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Initially populated by Data Factory value, available for override</inlineHelpText>
    <label>Override Phone</label>
    <type>Phone</type>
</CustomField>