force-app/main/default/objects/Contact/fields/Participant_Opt_In_Status_Emails__c.field-meta.xml
<CustomField>
    <fullName>Participant_Opt_In_Status_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt In Emails</label>
    <type>Checkbox</type>
</CustomField>