force-app/main/default/objects/Contact/fields/Participant_Opt_In_Status_SMS__c.field-meta.xml
<CustomField>
    <fullName>Participant_Opt_In_Status_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Participant Opt In Status SMS</label>
    <type>Checkbox</type>
</CustomField>