force-app/main/default/objects/Contact/fields/Participant_Phone_Opt_In_Permit_Phone__c.field-meta.xml
<CustomField>
    <fullName>Participant_Phone_Opt_In_Permit_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt In Phone</label>
    <type>Checkbox</type>
</CustomField>