force-app/main/default/objects/Contact/fields/PI_DelegateAccessLevel__c.field-meta.xml
<CustomField>
    <fullName>PI_DelegateAccessLevel__c</fullName>
    <description>Access level for PI delegate</description>
    <label>PI Delegate Access Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All of same responsibilities. But can&#39;t delegate to others</fullName>
            </value>
            <value>
                <fullName>All, except accepting HCP or delegate to others</fullName>
            </value>
            <value>
                <fullName>Support Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>