force-app/main/default/objects/Contact/fields/PI_My_Studies_Filters__c.field-meta.xml
<CustomField>
    <fullName>PI_My_Studies_Filters__c</fullName>
    <label>PI My Studies Filters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>