force-app/main/default/objects/Contact/fields/PPM_ID__c.field-meta.xml
<CustomField>
    <fullName>PPM_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>IQVIA consents specific PPM ID captured at Contact level for Participants/Caregivers</inlineHelpText>
    <label>PPM ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>