force-app/main/default/objects/Contact/fields/Preferred_Reimbursement_Currency__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Reimbursement_Currency__c</fullName>
    <label>Preferred Reimbursement Currency</label>

    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Preferred_Reimbursement_Currency</valueSetName>
    </valueSet>
</CustomField>