force-app/main/default/objects/Contact/fields/Prequalified__c.field-meta.xml
<CustomField>
    <fullName>Prequalified__c</fullName>
    <inlineHelpText>Is the buyer Prequalified?</inlineHelpText>
    <label>Prequalified?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>