force-app/main/default/objects/Contact/fields/Previous_Trial_Experience__c.field-meta.xml
<CustomField>
    <fullName>Previous_Trial_Experience__c</fullName>
    <description>HCP Does the physician have trial experience Y N</description>
    <inlineHelpText>HCP Does the physician have trial experience Y N</inlineHelpText>
    <label>Previous Trial Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_Unknown</valueSetName>
    </valueSet>
</CustomField>