force-app/main/default/objects/Contact/fields/primaryContact__c.field-meta.xml
<CustomField>
    <fullName>primaryContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary contact of a delegate</description>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Delegates</relationshipName>

    <type>Lookup</type>
</CustomField>