force-app/main/default/objects/Contact/fields/Profile_Update_Years_Notification__c.field-meta.xml
<CustomField>
    <fullName>Profile_Update_Years_Notification__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Profile Update Years Notification</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>