force-app/main/default/objects/Contact/fields/QIDC__OK_MDM_Is_Privacy_Law_Enabled_IMS__c.field-meta.xml
<CustomField>
    <fullName>QIDC__OK_MDM_Is_Privacy_Law_Enabled_IMS__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, this account is flagged for Privacy Law regulations.</description>
    <inlineHelpText>If checked, this account is flagged for Privacy Law regulations.</inlineHelpText>
    <label>Is Privacy Law Enabled</label>
    <type>Checkbox</type>
</CustomField>