force-app/main/default/objects/Contact/fields/Registry_Source__c.field-meta.xml
<CustomField>
    <fullName>Registry_Source__c</fullName>
    <formula>Text(Current_Participant_Enrollment__r.Referral_Source__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registry Source</label>
    <type>Text</type>
</CustomField>