force-app/main/default/objects/Contact/fields/Resource_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Resource_Notifications__c</fullName>
    <label>Resource Notifications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>