force-app/main/default/objects/Contact/fields/RP_Invited_By_PI__c.field-meta.xml
<CustomField>
    <fullName>RP_Invited_By_PI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RP Invited By PI</label>
    <type>Checkbox</type>
</CustomField>