force-app/main/default/objects/Contact/fields/RRCookiesAllowedCookie__c.field-meta.xml
<CustomField>
    <fullName>RRCookiesAllowedCookie__c</fullName>
    <defaultValue>true</defaultValue>
    <label>RRCookiesAllowedCookie</label>
    <type>Checkbox</type>
</CustomField>