force-app/main/default/objects/Contact/fields/RRJanssenCookiesAllowedCookie__c.field-meta.xml
<CustomField>
	   <fullName>RRJanssenCookiesAllowedCookie__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This is using for track RRCookiesAllowedCookie for Janssen study</description>
        <label>RRJanssenCookiesAllowedCookie</label>
        <type>Checkbox</type>
  
</CustomField>