force-app/main/default/objects/Contact/fields/RRJanssenLanguageAllowedCookie__c.field-meta.xml
<CustomField>
     <fullName>RRJanssenLanguageAllowedCookie__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is using for track RRLanguageAllowedCookie for Janssen study</description>
        <label>RRJanssenLanguageAllowedCookie</label>
        <type>Checkbox</type>
</CustomField>