force-app/main/default/objects/Contact/fields/RRLanguageAllowedCookie__c.field-meta.xml
<CustomField>
    <fullName>RRLanguageAllowedCookie__c</fullName>
    <defaultValue>true</defaultValue>
    <label>RRLanguageAllowedCookie</label>
    <type>Checkbox</type>
</CustomField>