force-app/main/default/objects/Contact/fields/Salutation_With_Name__c.field-meta.xml
<CustomField>
    <fullName>Salutation_With_Name__c</fullName>
    <formula>TEXT(Salutation) + &#39; &#39; + Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salutation With Name</label>
    <type>Text</type>
</CustomField>